--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <h1>テキストボックスに入力した値を表示する</h1>
     <input type="text" value="ここに値を入力してください" id="tbox">
     <input type="button" value="click" id="button">
+    <p id="msg"></p>
     <script src=jstest.js></script>
   </body>
 </html>
