--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <input type="text" value="ここに値を入力してください" id="tbox">
     <input type="button" value="click" id="button">
     <p id="msg"></p>
-    <script src=jstest.js></script>
+    <script src="jstest.js"></script>
   </body>
 </html>
